--- a/css/styles.less
+++ b/css/styles.less
@@ -162,4 +162,15 @@ body {
       display: none;
     }
   }
+  #user-profile-main {
+    margin: auto;
+    text-align: center;
+    a {
+      text-decoration: none;
+      color: white;
+    }
+    .edit-password {
+      display: none;
+    }
+  }
 }
