--- a/css/styles.less
+++ b/css/styles.less
@@ -36,6 +36,11 @@ body {
           width: 23%;
           flex-direction: row;
           justify-content: space-around;
+          a {
+            text-decoration: none;
+            color: white;
+            margin-top: 5%;
+          }
           .btn {
             flex: 1;
             background-color: #008a0e;
@@ -45,6 +50,7 @@ body {
             margin-top: 3%;
             height: 75%;
             width: 100%;
+            cursor: pointer;
           }
 
           .btn-register {
@@ -55,6 +61,9 @@ body {
             }
           }
         }
+      }
+      .login-form {
+        display: none;
       }
     }
     #main {
