--- a/css/styles.less
+++ b/css/styles.less
@@ -72,6 +72,7 @@ body {
       margin: auto;
       margin-top: 18%;
       width: 45%;
+
       h1 {
         margin-bottom: 10px;
       }
@@ -137,6 +138,21 @@ body {
       max-width: 75%;
       p {
         margin-top: 3%;
+      }
+    }
+    #snippets {
+      margin: 5% 0% 20% 35%;
+      max-width: 35%;
+      max-height: 30vh;
+      display: flex;
+      flex-direction: column;
+      .snippet {
+        flex: 1;
+        margin-bottom: 15%;
+        .title-date {
+          display: flex;
+          justify-content: space-between;
+        }
       }
     }
   }
